--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -1,3 +1,8 @@
+{% extends 'base.html.twig' %}
+
+{% block body %}
+
 <h1>Coucou</h1>
 <p>C'est içi la liste des choses à faire avant de passer de l'autre côté du rideau !</p>
 
+{% endblock %}
