--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,17 +5,23 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+
     <title>{% block title %}Bucket-List{% endblock %}</title>
+
+    <link rel="stylesheet" href="{{ asset('css/style.css') }}">
 </head>
 <body>
     <header>
-
+        <link rel="icon" href="{{ asset('img/favicon.png') }}">
+        <img src="{{ asset('img/logo.png') }}">
+        <h1>BUCKET-LIST</h1>
     </header>
     <main>
         {% block body %}{% endblock %}
     </main>
     <footer>
-        {% block footer %}{% endblock %}
+        <div>©Bucket-List </div>
     </footer>
 </body>
 </html>
