--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,19 +9,30 @@
 
     <title>{% block title %}Bucket-List{% endblock %}</title>
 
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Hachi+Maru+Pop&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="{{ asset('css/style.css') }}">
+    <link rel="icon" href="{{ asset('img/favicon.png') }}">
+
 </head>
 <body>
     <header>
-        <link rel="icon" href="{{ asset('img/favicon.png') }}">
-        <img src="{{ asset('img/logo.png') }}">
-        <h1>BUCKET-LIST</h1>
+        <a href="{{ path('main_home') }}" title="Go back home">
+        <img src="{{ asset('img/logo.png') }}" alt="Bucketlist"> Bucketlist
+        </a>
+        <nav>
+            <a href="{{ path('main_home') }}" title="Go back home">Home</a>
+            <a href="{{ path('wish_list') }}" title="The wish list">Wishes</a>
+            <a href="{{ path('main_about_us') }}" title="About us">About Us</a>
+            <a href="{{ path('wish_detail', {id: 566}) }}">Wish détails démo</a>
+        </nav>
     </header>
     <main>
         {% block body %}{% endblock %}
     </main>
     <footer>
-        <div>©Bucket-List </div>
+        &copy;Bucketlist {{ "now"|date("Y") }}
     </footer>
 </body>
 </html>
