--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -1,8 +1,10 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Que voulez vous faire avant de mourir ?{% endblock %}
+
 {% block body %}
 
-<h1>Coucou</h1>
+<h1>Bucketlist</h1>
 <p>C'est içi la liste des choses à faire avant de passer de l'autre côté du rideau !</p>
 
 {% endblock %}
