--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,8 +11,7 @@
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Hachi+Maru+Pop&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="{{ asset('css/style.css') }}">
+    {# <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"> #}
     <link rel="icon" href="{{ asset('img/favicon.png') }}">
 
 </head>
@@ -25,7 +24,7 @@
             <a href="{{ path('main_home') }}" title="Go back home">Home</a>
             <a href="{{ path('wish_list') }}" title="The wish list">Wishes</a>
             <a href="{{ path('main_about_us') }}" title="About us">About Us</a>
-            <a href="{{ path('wish_detail', {id: 566}) }}">Wish détails démo</a>
+            <a href="{{ path('wish_detail', {id: 566}) }}">Wishes détails</a>
         </nav>
     </header>
     <main>
