--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,3 +4,9 @@ body
     background-color: antiquewhite;
     font-family: 'poppins', serif;
 }
+
+label
+{
+    display: block;
+    margin-top: 10px;
+}
