--- a/templates/wish/list.html.twig
+++ b/templates/wish/list.html.twig
@@ -11,7 +11,10 @@
         {% for wish in wishes %}
             <article>
                 <a href="{{ path('wish_detail', {id:wish.id})}}" title="Voir les details !">{{ wish.title }}</a>
+                {{ wish.category.name }}
             </article>
+
+
             {% else %}
             <div>There are no wishes !</div>
         {% endfor %}
