--- a/templates/wish/new.html.twig
+++ b/templates/wish/new.html.twig
@@ -8,7 +8,7 @@
     <h1>New wish</h1>
 
     <div>
-        {{ form(wishForm) }}
+        {{ form(wishForm, {attr: {'novalidate': 'novalidate'}}) }}
     </div>
 
 {% endblock %}
