--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -5,6 +5,6 @@
 {% block body %}
 
 <h1>Bucketlist</h1>
-<p>C'est içi la liste des choses à faire avant de passer de l'autre côté du rideau !</p>
+    <img src="{{ asset('img/aurores.jpg') }}" id="aurores" alt="aurores" width="1700" height="700">
 
 {% endblock %}
