--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,7 +5,7 @@ html, body {
 }
 
 body {
-    background-color: antiquewhite;
+    background-color: #e6fff7;
     font-family: 'poppins', serif;
     flex-direction: column;
 }
@@ -75,6 +75,7 @@ label {
 #wish_form_dateCreated {
     display: inline-flex;
 }
+
 
 
 
