--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,6 +26,8 @@
             <a href="{{ path('wish_list') }}" title="The wish list">Wishes</a>
             <a href="{{ path ('wish_new') }}" title="New wish">New wish</a>
             <a href="{{ path('main_about_us') }}" title="About us">About Us</a>
+            <a href="{{ path('app_register') }}" title="Register">S'inscrire</a>
+
         </nav>
     </header>
     <main>
